syntax = "proto3";

option java_package = "ex.grpc";
option objc_class_prefix = "HSW";

package example;

service Bidding {
  rpc listProduct (ListRequest) returns (ListReply) {}
  rpc placeBid (BidRequest) returns (BidReply) {}
  rpc getCatalogue (CatalogueRequest) returns (CatalogueReply) {}
  rpc getBidHistory (BidHistoryRequest) returns (BidHistoryReply) {}
  rpc getWinner (WinnerRequest) returns (WinnerReply) {}
}

message ListRequest {
  string name = 1;
  double price = 2;
  int32 seller_id = 3;
}

message ListReply {
  string message = 1;
}

message BidRequest {
  int32 product_id = 1;
  int32 bidder_id = 2;
  double price = 3;
}

message BidReply {
  string message = 1;
}

message CatalogueRequest {
  int32 product_id_begin = 1;
  int32 limit = 2;
}

message CatalogueReply {
  message Product {
    int32 id = 1;
    string name = 2;
    double price = 3;
    int32 seller_id = 4;
  }
  repeated Product products = 1;
}

message BidHistoryRequest {
  optional int32 product_id_filter = 1;
  optional int32 bidder_id_filter = 2;
}

message Bid {
  int32 id = 1;
  string product_name = 2;
  string bidder_name = 3;
  double price = 4;
  string bid_at = 5;
}

message BidHistoryReply {
  repeated Bid bids = 1;
}

message WinnerRequest {
  optional int32 product_id_filter = 1;
}

message WinnerReply {
  repeated Bid bids = 1;
}

